<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="12dp"
        android:paddingTop="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                style="@style/MyProfileIcon"
                android:src="@drawable/ic_person" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/profile_name"
                android:contentDescription="@string/profile_hint_name"
                android:padding="3dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_name"
                    android:inputType="textPersonName|textCapWords" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                style="@style/MyProfileIcon"
                app:srcCompat="@drawable/ic_personal_code" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_personal_code_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/profile_personal_code"
                android:contentDescription="@string/profile_hint_personal_code"
                android:padding="3dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_personal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_personal_code"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                style="@style/MyProfileIcon"
                android:src="@drawable/ic_email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/profile_email"
                android:contentDescription="@string/profile_hint_email"
                android:padding="3dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                style="@style/MyProfileIcon"
                android:src="@drawable/ic_phone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_telephone_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/profile_telephone"
                android:contentDescription="@string/profile_hint_telephone"
                android:padding="3dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_telephone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/profile_data_agreement" />

    </LinearLayout>
</ScrollView>